--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^5.9.22",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.0.1"
+    "passport-local-mongoose": "^6.0.1",
+    "socket.io": "^2.3.0"
   }
 }
